--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "shared-storage",
+    "name": "@Uglyanet/shared-storage",
     "type": "module",
     "private": false,
     "version": "1.0.0",
@@ -9,6 +9,9 @@
     "files": [
         "dist"
     ],
+    "repository": {
+        "url":"git://github.com/Uglyanet/shared_storage.git."
+    },
     "scripts": {
         "build": "npx rollup -c"
     },
